addeing udemy exe

--- a/UDEMY/n3-04-11-reading-notes/n3-04-11-reading-notes/notes-app/package.json
+++ b/UDEMY/n3-04-11-reading-notes/n3-04-11-reading-notes/notes-app/package.json
@@ -1,18 +1,16 @@
 {
-  "name": "users",
+  "name": "notes-app",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "fs": "^0.0.1-security",
-    "uuid": "^8.3.2",
-    "yargs": "^17.3.1"
+    "chalk": "^2.4.1",
+    "validator": "^10.8.0",
+    "yargs": "^12.0.2"
   }
 }
